# PFD

m00/ex00/: Hello.py
m00/ex01/: format_ft_time.py
m00/ex02/: find_ft_type.py
m00/ex03/: NULL_not_found.py
m00/ex04/: whatis.py
m00/ex05/: building.py
m00/ex06/: filterstring.py  ft_filter.py
m00/ex07/: sos.py
m00/ex08/: Loading.py  tester.py
m00/ex09/: LICENSE  README.md  pyproject.toml
m00/ex09/ft_package/: tools.py
m01/ex00/: give_bmi.py  tester.py
m01/ex01/: array2D.py  tester.py
m01/ex02/: load_image.py  tester.py
m01/ex03/: load_image.py  tester.py  zoom.py
m01/ex04/: load_image.py  rotate.py  tester.py
m01/ex05/: pimp_image.py  tester.py
m02/ex00/: load_csv.py  tester.py
m02/ex01/: aff_life.py  tester.py
m02/ex02/: aff_pop.py  load_csv.py  tester.py
m02/ex03/: projection_life.py  tester.py
m03/ex01/: S1E7.py
m03/ex02/: DiamondTrap.py  S1E9.py
m03/ex03/: ft_calculator.py
m03/ex04/: ft_calculator.py
m04/ex00/: statistics.py
m04/ex01/: in_out.py
m04/ex02/: callLimit.py
m04/ex03/: new_student.py
